--- a/src/main.css
+++ b/src/main.css
@@ -96,7 +96,7 @@ section {
     position: absolute !important;
     border: 3px solid #2E1065;
     border-radius: 20px;
-    width: 100%;
+    width: 90%;
     z-index: 1 !important;
 }
 
@@ -109,6 +109,7 @@ section {
 }
 
 .skillsPlate {
+    color: #475569;
     display: grid;
     justify-content: center;
     align-items: center;
@@ -119,7 +120,6 @@ section {
     font-size: 12px;
     font-weight: 100 !important;
     text-align: center;
-    color: #475569;
     width: 100%;
     transition: all 0.3s ease;
 }
@@ -131,7 +131,25 @@ section {
     gap: 16px;
 }
 
+.sectionTitle {
+    color: #1E293B;
+    font-family: "Righteous", sans-serif !important;
+    font-weight: 100 !important;
+    letter-spacing: 1px;
+    width: 100%;
+    text-align: center;
+    font-size: 35px;
+}
 
+.subtitle {
+    color: #475569;
+    font-size: 18px;
+    margin-top: 10px;
+    font-family: "Offset", sans-serif !important;
+    font-weight: 600 !important;
+    width: 100%;
+    text-align: center;
+}
 
 /* Responsive  */
 @media (max-width: 1024px) {
@@ -156,6 +174,7 @@ section {
     .tagline {
         font-size: 26px;
         border-radius: 40%;
+        border-radius: 25%;
     }
 
     .skillsPlate {
@@ -168,6 +187,15 @@ section {
         justify-content: center;
         flex-wrap: wrap;
         gap: 14px;
+    }
+
+    .sectionTitle {
+        font-size: 25px;
+    }
+
+    .subtitle {
+        font-size: 16px;
+        margin-top: 2px;
     }
 }
 
@@ -189,7 +217,11 @@ section {
 
     .tagline {
         font-size: 22px;
-        padding: 2px 16px;
+        background-color: transparent !important;
+    }
+
+    .horizontal-line-home {
+        display: none;
     }
 
     .subTagline {
@@ -207,7 +239,17 @@ section {
         justify-content: center;
         gap: 12px;
     }
+
+    .sectionTitle {
+        font-size: 22px;
+    }
+
+    .subtitle {
+        font-size: 14px;
+        margin-top: 2px;
+    }
 }
+
 
 @media (max-width: 576px) {
     .homePageLayout {
@@ -234,9 +276,7 @@ section {
 
     .tagline {
         font-size: 14px;
-        padding: 2px 0;
-        background-color: none !important;
-        border-radius: 2%;
+        background-color: transparent !important;
         text-align: center;
         line-height: 1.2 !important;
     }
@@ -260,5 +300,16 @@ section {
     .skillIcons {
         justify-content: center;
         gap: 10px;
+    }
+
+    .sectionTitle {
+        font-size: 20px;
+        padding: 0px 30px !important;
+        line-height: 1.2;
+    }
+
+    .subtitle {
+        font-size: 12px;
+        margin-top: 6px;
     }
 }
