--- a/src/main.css
+++ b/src/main.css
@@ -192,11 +192,11 @@ section {
     width: 100%;
     overflow: hidden;
     height: 90dvh;
-    background-color: #9ca4b0;
+    background-color: transparent;
     border-radius: 20px;
 }
 
-.img-container{
+.img-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -219,6 +219,14 @@ section {
     border-radius: 50px 0 0 50px;
     right: 0px;
 }
+
+.swiper-slide {
+    height: 100% !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .swiper-button-prev-custom,
 .swiper-button-next-custom {
